[build] add --enable-native-access=ALL-UNNAMED